--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^4.16.3",
+    "mongoose": "^5.3.14",
     "morgan": "^1.9.0",
     "uuid": "^3.2.1"
   },
